minor refactoring, replace list.get(0) with list.getFirst()