@@ -96,7 +96,7 @@ public class ParkingRepositoryImpl implements ParkingRepositoryCustom {
             if (results.isEmpty()) {
                 return null;
             } else {
-                return results.get(0);
+                return results.getFirst();
             }
         } catch (NoResultException noResultException) {
             return null;
@@ -223,7 +223,7 @@ public class ParkingRepositoryImpl implements ParkingRepositoryCustom {
     private <T> T getOneOrNull(TypedQuery<T> query) {
         try {
             List<T> resultList = query.getResultList();
-            return resultList.isEmpty() ? null : resultList.get(0);
+            return resultList.isEmpty() ? null : resultList.getFirst();
         } catch (NoResultException e) {
             return null;
         }
